Thu Feb 17 18:13:24 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for collapsing on a key

Thu Feb 17 16:57:42 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added interface to stemming algorithms to API (OmStem class)

Thu Feb 17 12:00:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Header files now get installed in a subdirectory (om/)

Tue Feb 15 17:03:31 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the "allow query terms" option for Expand Terms.

	* Added some useful ExpandDeciders to omenquire.h

Tue Feb 15 12:59:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The dvi documentation is now automatically built and added
	  to the distribution.

Mon Feb 14 17:23:38 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmQuery::get_terms()

	* Implemented OmEnquire::get_matching_terms()

Mon Feb 14 13:37:56 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added tests for OmExpandOptions and OmMSet.max_attained

Fri Feb 11 18:40:39 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed the percent cutoff test in apitest.

Fri Feb 11 17:52:42 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added percent cutoff to the API, and added a test to apitest
	  for it.

Fri Feb 11 16:44:34 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The api docs now go into the distribution tarball.

Thu Feb 10 18:53:33 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmEnquire::get_matching_terms() to the API.

Thu Feb 10 18:02:37 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added tests to apitest for the match and expand decision functors,
	  and added another shorthand function to reduce code duplication.

Thu Feb 10 16:04:45 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More documentation in omenquire.h

	* Changed isnull to isdefined (note change of sense), since this makes